kubernetes-up-and-running/ingress-loadbalancer/ ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: host-ingress
spec:
  tls:
    - hosts:
        - alpaca.example.com
      secretName: tls-secret-name
  rules:
    - host: alpaca.example.com
      http:
        paths:
          - path: "/"
            backend:
              serviceName: bandicoot
              servicePort: 8080
          - path: "/a"
            backend:
              serviceName: alpaca
              servicePort: 8080
